Camino only - Bug 465493: Don't leak when doing localized string lookup on a background thread. sr=pink